[package]
name = "ice-104649"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "brotli", "gzip", "native-tls", "deflate"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
snafu = { version = "0.7.3", features = ["rust_1_61", "backtraces-impl-std"] }
